# DM_Sprite_RND

./: CMakeLists.txt  Kconfig  README.rst  linker.ld  ozone.jdebug  pm.yml  pm_static.yml  prj.conf
boot/zephyr/: CMakeLists.txt  Kconfig
boot/zephyr/boot/: CMakeLists.txt  linker.ld  pm_static.yml  prj.conf
boot/zephyr/boot/src/: main.c
spm/zephyr/: CMakeLists.txt  Kconfig
spm/zephyr/spm/: CMakeLists.txt  _linker.ld  linker.ld  pm_static.yml  prj.conf  sample.yaml
spm/zephyr/spm/includes/: dmtypes.h  spmInternal.h
spm/zephyr/spm/src/: main.c
src/: main.c
